[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyDML"
version = "0.0.1"
description = "Phasor-first data center UPS simulation toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
sim = [
  "pandapower>=2.14",
]
viz = [
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["PyDML*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
